# Test_MPI

./: .gitignore
Comm_spawn/ready/: Makefile  README.md  master.c  worker.c
Comm_spawn/return_code/: CMakeLists.txt  master.c  worker.c
Comm_spawn/unready/: master.c  worker.c
Gather/: CMakeLists.txt  test.c
Gather/c/: make.sh  test.c
Gather/python/: gather.py  numpy_gather.py  test.py
cmake_template/: CMakeLists.txt  test.c
environments/: Makefile  penv.cpp
